# functional-ducklings

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ducklings/: __init__.py  parameter_ducks.py  parameter_ducks_test.py  sequence_ducks.py
tests/: parameter_ducks_test.py  sequence_ducks_test.py
