[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "functional_ducklings"
version = "0.0.3"
authors = [
  { name="mcverry", email="mcverry@example.com" },
]
description = "small functional utils"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mcverry/functional_ducklings"
"Bug Tracker" = "https://github.com/mcverry/functional_ducklings/issues"